# poromechanics

./: LICENSE  setup.py
docker/: Dockerfile  build.sh  pyproject.toml
notebooks/: drained_parameters.ipynb  paper_parameters.ipynb  parameters.ipynb  plot_paper_runs.ipynb  plotting.ipynb
paper_cases/drained_triaxial_psi0/: drained.csv  drained.yml
paper_cases/drained_triaxial_psi7.5/: drained.csv  drained.py  drained.yml
paper_cases/thermal_triaxial_drained_cooling/: thermal.csv  thermal.py  thermal.yml
paper_cases/thermal_triaxial_drained_heating/: thermal.csv  thermal.py  thermal.yml
paper_cases/thermal_triaxial_undrained_cooling/: thermal.csv  thermal.py  thermal.yml
paper_cases/undrained_triaxial_psi0/: undrained.csv  undrained.py  undrained.yml
paper_cases/undrained_triaxial_psi7.5/: undrained.csv  undrained.py  undrained.yml
poromechanics/: constitutive.py
unit_test/drained_triaxial/: drained.csv  drained.py  drained.yml
unit_test/strain_softening/: gmshapi.py  softening.csv  softening.py
unit_test/thermal_triaxial/: thermal.csv  thermal.py
unit_test/undrained_triaxial/: undrained.csv  undrained.py  undrained.yml
