[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "FEniCS_SZ"
version = "0.8.0"
dependencies = [
    "jupyter-book==1.0.0",
    "jupyterlab==4.1.6",
    "meshio==5.3.5",
    "h5py==3.11.0",
    "seaborn==0.13.2",
    "pandas==2.2.2",
    "tqdm==4.66.4",
    "pyvista[all]==0.43.5",
    "fenics-dolfinx==0.8.0",
    "ipdb==0.13.13",
    "ipylab==1.0.0",
]

[project.optional-dependencies]
dev = ["pdbpp", "ipython==8.23.0", "jupytext==1.16.1", "ruff==0.4.1"]

[tool.setuptools]
packages = []


[tool.jupytext]
formats = "ipynb,py:percent"


[tool.ruff.lint.isort]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["gmsh==4.12.2.dev1", "numpy==1.26.4", "pytest==8.1.1"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py==3.1.6", "petsc4py==3.21.0"]
